crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__statement_member_assignment.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { obj.field = value; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Assignment {
                            lhs: Spanned(
                                MemberAccess {
                                    object: Spanned(
                                        Identifier(
                                            Spanned(
                                                "obj",
                                                14..17,
                                            ),
                                        ),
                                        14..17,
                                    ),
                                    field: Spanned(
                                        "field",
                                        18..23,
                                    ),
                                },
                                14..17,
                            ),
                            rhs: Spanned(
                                Identifier(
                                    Spanned(
                                        "value",
                                        26..31,
                                    ),
                                ),
                                26..31,
                            ),
                        },
                        14..32,
                    ),
                ],
            },
            0..34,
        ),
    ),
]
