crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__statement_nested_blocks.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { { { let inner = 1; } let outer = 2; } }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Block(
                            [
                                Spanned(
                                    Block(
                                        [
                                            Spanned(
                                                Let {
                                                    name: Spanned(
                                                        "inner",
                                                        22..27,
                                                    ),
                                                    value: Spanned(
                                                        Literal(
                                                            1,
                                                        ),
                                                        30..31,
                                                    ),
                                                },
                                                18..32,
                                            ),
                                        ],
                                    ),
                                    16..34,
                                ),
                                Spanned(
                                    Let {
                                        name: Spanned(
                                            "outer",
                                            39..44,
                                        ),
                                        value: Spanned(
                                            Literal(
                                                2,
                                            ),
                                            47..48,
                                        ),
                                    },
                                    35..49,
                                ),
                            ],
                        ),
                        14..51,
                    ),
                ],
            },
            0..53,
        ),
    ),
]
