crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__statement_return_without_value.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { return; }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [],
            return_type: None,
            body: [
                Return {
                    value: None,
                },
            ],
        },
    ),
]
