crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__statement_simple_assignment.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { x = 5; }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [],
            return_type: None,
            body: [
                Assignment {
                    lhs: Identifier(
                        "x",
                    ),
                    rhs: Literal(
                        5,
                    ),
                },
            ],
        },
    ),
]
