crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__statement_simple_block.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { { let x = 1; let y = 2; } }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Block(
                            [
                                Spanned(
                                    Let {
                                        name: Spanned(
                                            "x",
                                            20..21,
                                        ),
                                        value: Spanned(
                                            Literal(
                                                1,
                                            ),
                                            24..25,
                                        ),
                                    },
                                    16..26,
                                ),
                                Spanned(
                                    Let {
                                        name: Spanned(
                                            "y",
                                            31..32,
                                        ),
                                        value: Spanned(
                                            Literal(
                                                2,
                                            ),
                                            35..36,
                                        ),
                                    },
                                    27..37,
                                ),
                            ],
                        ),
                        14..39,
                    ),
                ],
            },
            0..41,
        ),
    ),
]
