crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__statement_simple_let.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { let x = 5; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Let {
                            name: Spanned(
                                "x",
                                18..19,
                            ),
                            value: Spanned(
                                Literal(
                                    5,
                                ),
                                22..23,
                            ),
                        },
                        14..24,
                    ),
                ],
            },
            0..26,
        ),
    ),
]
