crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__struct_empty_struct.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: struct Unit { }
result: [
    Struct(
        StructDef {
            name: "Unit",
            fields: [],
        },
    ),
]
