crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__struct_simple_struct.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: struct Point { x: felt, y: felt }
result: [
    Struct(
        StructDef {
            name: "Point",
            fields: [
                (
                    "x",
                    Named(
                        "felt",
                    ),
                ),
                (
                    "y",
                    Named(
                        "felt",
                    ),
                ),
            ],
        },
    ),
]
